[gd_scene load_steps=17 format=3 uid="uid://blma87368m17f"]

[ext_resource type="Script" uid="uid://1grwospwaa7k" path="res://source/gui/game_ui.gd" id="1_0cyqu"]
[ext_resource type="Texture2D" uid="uid://dwrbg425et6eg" path="res://assets/ui/UI_Sidebar.png" id="3_1j0tq"]
[ext_resource type="Texture2D" uid="uid://ckeyq1q5u2xq3" path="res://assets/ui/UI_Clock.png" id="4_oa8dt"]
[ext_resource type="Texture2D" uid="uid://bnxttlcplbqs5" path="res://assets/ui/UI_Order.png" id="5_8mydn"]
[ext_resource type="Script" uid="uid://s5qduki76ktw" path="res://source/gui/game_timer.gd" id="5_jcs87"]
[ext_resource type="Texture2D" uid="uid://01vntb6c34hm" path="res://assets/ui/UI_Serving.png" id="6_v2kgr"]
[ext_resource type="FontFile" uid="uid://bb7mjr65gyr7i" path="res://assets/fonts/04B_30__.TTF" id="7_v2kgr"]
[ext_resource type="FontFile" uid="uid://b00a6crxmm10e" path="res://assets/fonts/Pix32.ttf" id="8_72gkx"]
[ext_resource type="Texture2D" uid="uid://bvmx30geg4a86" path="res://assets/ui/UI_Clock_cropped.png" id="9_72gkx"]

[sub_resource type="LabelSettings" id="LabelSettings_cnw61"]
font = ExtResource("7_v2kgr")
font_size = 58
outline_size = 13
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_72gkx"]
line_spacing = 26.75
font = ExtResource("7_v2kgr")
font_size = 42
outline_size = 14
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jcs87"]
line_spacing = -0.025
font = ExtResource("8_72gkx")
font_size = 37
outline_size = 12
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="Gradient" id="Gradient_cnw61"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.53898305, 0.5966102, 0.6101695)
colors = PackedColorArray(0.9607843, 0.9019608, 0.7882353, 1, 0.75686276, 0.4862745, 0.3647059, 1, 0.30588236, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_72gkx"]
gradient = SubResource("Gradient_cnw61")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_0cyqu"]
font = ExtResource("7_v2kgr")
font_size = 38
outline_size = 14
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gmocp"]
font = ExtResource("7_v2kgr")
font_size = 60
outline_size = 14
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cyqu")

[node name="Sidebar" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("3_1j0tq")

[node name="FrameServing" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("6_v2kgr")

[node name="Clock" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_jcs87")

[node name="FrameClock" type="TextureRect" parent="Clock"]
layout_mode = 0
texture = ExtResource("4_oa8dt")

[node name="Label" type="Label" parent="Clock"]
layout_mode = 0
offset_left = 46.0
offset_top = 66.0
offset_right = 386.0
offset_bottom = 149.0
text = "CLOCK"
label_settings = SubResource("LabelSettings_cnw61")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Order" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FrameOrder" type="TextureRect" parent="Order"]
layout_mode = 0
texture = ExtResource("5_8mydn")

[node name="OrderHeader" type="Label" parent="Order/FrameOrder"]
layout_mode = 0
offset_left = 46.0
offset_top = 232.0
offset_right = 382.0
offset_bottom = 318.0
text = "Order:"
label_settings = SubResource("LabelSettings_72gkx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrderName" type="Label" parent="Order/FrameOrder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 56.0
offset_top = 281.0
offset_right = 367.0
offset_bottom = 345.0
text = "1x Pizza"
label_settings = SubResource("LabelSettings_jcs87")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequestHeader" type="Label" parent="Order/FrameOrder"]
layout_mode = 0
offset_left = 54.0
offset_top = 339.0
offset_right = 382.0
offset_bottom = 496.0
text = "Special
Requests:"
label_settings = SubResource("LabelSettings_72gkx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReqA" type="Label" parent="Order/FrameOrder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 81.0
offset_top = 490.0
offset_right = 217.0
offset_bottom = 553.0
text = "x sweet"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="ReqB" type="Label" parent="Order/FrameOrder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 81.0
offset_top = 525.0
offset_right = 210.0
offset_bottom = 588.0
text = "x salty"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="ReqC" type="Label" parent="Order/FrameOrder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 230.0
offset_top = 490.0
offset_right = 437.0
offset_bottom = 553.0
text = "x sour"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="ReqD" type="Label" parent="Order/FrameOrder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 230.0
offset_top = 525.0
offset_right = 437.0
offset_bottom = 588.0
text = "x umami"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="Serving" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ServingHeader" type="Label" parent="Serving"]
layout_mode = 0
offset_left = 46.0
offset_top = 705.0
offset_right = 380.0
offset_bottom = 832.0
text = "Serving
Now:"
label_settings = SubResource("LabelSettings_72gkx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DishA" type="Label" parent="Serving"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 81.0
offset_top = 840.0
offset_right = 217.0
offset_bottom = 903.0
text = "x sweet"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="DishB" type="Label" parent="Serving"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 81.0
offset_top = 875.0
offset_right = 210.0
offset_bottom = 938.0
text = "x salty"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="DishC" type="Label" parent="Serving"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 230.0
offset_top = 840.0
offset_right = 437.0
offset_bottom = 903.0
text = "x sour"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="DishD" type="Label" parent="Serving"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 230.0
offset_top = 875.0
offset_right = 437.0
offset_bottom = 938.0
text = "x umami"
label_settings = SubResource("LabelSettings_jcs87")
vertical_alignment = 1

[node name="Sticker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 323.0
offset_top = 164.0
offset_right = 505.0
offset_bottom = 292.0
rotation = 0.22551784
texture = SubResource("GradientTexture2D_72gkx")

[node name="OrderProgress" type="Label" parent="Sticker"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -19.5
offset_right = 53.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "6/6"
label_settings = SubResource("LabelSettings_0cyqu")

[node name="DayFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -371.0
offset_bottom = 119.0
grow_horizontal = 0
texture = ExtResource("9_72gkx")

[node name="CurrentDay" type="Label" parent="DayFrame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Day 0"
label_settings = SubResource("LabelSettings_gmocp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeRect" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
